--- a/_pages/contato.html
+++ b/_pages/contato.html
@@ -1,8 +1,8 @@
 ---
 layout: page
 title: Contact
-permalink: /contact/
-image: '/images/16.jpg'
+permalink: /contato/
+image: '/images/contato.jpg'
 ---
 
 <div class="form-box">
@@ -13,19 +13,19 @@ image: '/images/16.jpg'
   </div>
   <form class="form" action="{% if site.data.settings.contact.email %}https://formspree.io/{{site.data.settings.contact.email}}{% else %}#{% endif %}" method="POST">
     <div class="form__group">
-      <label class="form__label screen-reader-text" for="form-name">Your Name</label>
+      <label class="form__label screen-reader-text" for="form-name">Seu Nome</label>
       <input class="form__input" id="form-name" type="text" name="name" placeholder="Name" required>
     </div>
     <div class="form__group">
-      <label class="form__label screen-reader-text" for="form-email">Your Email</label>
+      <label class="form__label screen-reader-text" for="form-email">Seu Email</label>
       <input class="form__input" id="form-email" type="email" name="_replyto" placeholder="Email" required>
     </div>
     <div class="form__group">
-      <label class="form__label screen-reader-text" for="form-text">Your Message</label>
+      <label class="form__label screen-reader-text" for="form-text">Sua Mensagem</label>
       <textarea class="form__input" id="form-text" name="text" rows="10" placeholder="Message" required></textarea>
     </div>
     <div class="form__group">
-      <button class="button button--primary" type="submit">Send Message</button>
+      <button class="button button--primary" type="submit">Enviar Mensagem</button>
     </div>
   </form>
 </div>
