--- a/_pages/contato.html
+++ b/_pages/contato.html
@@ -12,23 +12,20 @@ image: '/images/contato.jpg'
     {% endif %}
   </div>-->
   
-## Alô, Alô, Tem Alguém Aí? (Sim, temos!)
-**E aí, pudim!**
-
-Seus olhos pousaram nesta página épica, Se você chegou até aqui, é porque tem algo a nos dizer. Pode ser um recado telepático, um grito de alegria ou pode ser uma dúvida cruel. Seja qual for sua mensagem, estamos prontos para recebê-la!
-
-**Preencha o formulário abaixo com sua mensagem e prepare-se para:**
-
--   **Entrar em contato com a nossa equipe de super-heróis:** estamos prontos para te ajudar a resolver qualquer problema, desde o mais simples até o mais intergaláctico.
--   **Aquecer nossos corações com seus elogios:** sua opinião é mais valiosa do que um mapa do tesouro!
--   **Inspirar novas ideias:** compartilhe suas sugestões e nos ajude a construir um futuro ainda mais incrível.
--   **Fazer pedidos mágicos:** quem sabe podemos realizar seus sonhos... ou pelo menos tentar!
-
-**Então, não perca tempo!**
-
-Empunhe sua caneta (ou teclado) e envie sua mensagem. Juntos, vamos dominar o mundo (ou pelo menos a internet)!
-
-**P.S.:** Se você precisar de ajuda para encontrar o formulário, use a magia do Google ou a força dos seus dedos para navegar no site.
+<div><div><h2>Alô, Alô, Tem Alguém Aí? (Sim, temos!)</h2>
+</div><div><p><strong>E aí, pudim!</strong></p>
+</div><div><p>Seus olhos pousaram nesta página épica, Se você chegou até aqui, é porque tem algo a nos dizer. Pode ser um recado telepático, um grito de alegria ou pode ser uma dúvida cruel. Seja qual for sua mensagem, estamos prontos para recebê-la!</p>
+</div><div><p><strong>Preencha o formulário abaixo com sua mensagem e prepare-se para:</strong></p>
+</div><div><ul>
+<li><strong>Entrar em contato com a nossa equipe de super-heróis:</strong> estamos prontos para te ajudar a resolver qualquer problema, desde o mais simples até o mais intergaláctico.</li>
+<li><strong>Aquecer nossos corações com seus elogios:</strong> sua opinião é mais valiosa do que um mapa do tesouro!</li>
+<li><strong>Inspirar novas ideias:</strong> compartilhe suas sugestões e nos ajude a construir um futuro ainda mais incrível.</li>
+<li><strong>Fazer pedidos mágicos:</strong> quem sabe podemos realizar seus sonhos… ou pelo menos tentar!</li>
+</ul>
+</div><div><p><strong>Então, não perca tempo!</strong></p>
+</div><div><p>Empunhe sua caneta (ou teclado) e envie sua mensagem. Juntos, vamos dominar o mundo (ou pelo menos a internet)!</p>
+</div><div><p><strong>P.S.:</strong> Se você precisar de ajuda para encontrar o formulário, use a magia do Google ou a força dos seus dedos para navegar no site.</p>
+</div></div><br><br>
   <form class="form" action="{% if site.data.settings.contact.email %}https://formspree.io/{{site.data.settings.contact.email}}{% else %}#{% endif %}" method="POST">
     <div class="form__group">
       <label class="form__label screen-reader-text" for="form-name">Seu Nome</label>
