--- a/receita.html
+++ b/receita.html
@@ -3,56 +3,232 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerar link de Impressão</title>
+    <title>Lista de 50 Receitas</title>
+	<style>
+	body {
+    font-family: 'Roboto', sans-serif;
+}
+
+a:visited {
+    color: red;
+}
+	</style>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h2>Insira a URL:</h2>
-    <form id="urlForm">
-        <input type="text" id="urlInput" placeholder="Insira o link original">
-        <button type="submit">Enviar</button>
-    </form>
 
-    <div id="iframeContainer"></div>
+<h1>Lista de Receitas</h1>
 
-    <script>
-        document.getElementById('urlForm').addEventListener('submit', function(event) {
-            event.preventDefault();
-            const url = document.getElementById('urlInput').value;
-            if (url.trim() !== '') {
-                getSecondLinkId(url);
-            } else {
-                console.error('Por favor, insira uma URL válida.');
-            }
-        });
+<table border="1">
+    <thead>
+        <tr>
+            <th>Título</th>
+            <th>URL</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Bolo de cenoura de liquidificador</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-de-liquidificador/" target="_blank">https://gean.me/bolo-de-cenoura-de-liquidificador</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de banana fofinho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-banana-fofinho/" target="_blank">https://gean.me/bolo-de-banana-fofinho</a></td>
+        </tr>
+        <tr>
+            <td>Pudim de Leite Condensado</td>
+            <td><a href="https://pudimperfeito.50x.com.br/historia-do-pudim">https://pudimperfeito.50x.com.br/historia-do-pudim</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate fácil e molhadinho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-rapido-e-molhadinho/" target="_blank">https://gean.me/bolo-de-chocolate-rapido-e-molhadinho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de fubá fofinho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-fuba-fofinho/" target="_blank">https://gean.me/bolo-de-fuba-fofinho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho molhadinho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-molhadinho/" target="_blank">https://gean.me/bolo-de-milho-molhadinho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de Laranja molhadinho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-laranja-molhadinho/" target="_blank">https://gean.me/bolo-de-laranja-molhadinho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de limão</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-limao/" target="_blank">https://gean.me/bolo-de-limao</a></td>
+        </tr>
+        <tr>
+            <td>Bolo formigueiro</td>
+            <td><a href="https://gean.me/receita?url=bolo-formigueiro/" target="_blank">https://gean.me/bolo-formigueiro</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de maçã com canela</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-maca-com-canela/" target="_blank">https://gean.me/bolo-de-maca-com-canela</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de iogurte</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-iogurte/" target="_blank">https://gean.me/bolo-de-iogurte</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de mandioca simples</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-mandioca-simples/" target="_blank">https://gean.me/bolo-de-mandioca-simples</a></td>
+        </tr>
+        <tr>
+            <td>Pão de ló</td>
+            <td><a href="https://gean.me/receita?url=pao-de-lo/" target="_blank">https://gean.me/pao-de-lo</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de Flocão simples</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-flocao-simples/" target="_blank">https://gean.me/bolo-de-flocao-simples</a></td>
+        </tr>
+        <tr>
+            <td>Bolo simple e fofo</td>
+            <td><a href="https://gean.me/receita?url=bolo-simples-e-fofo/" target="_blank">https://gean.me/bolo-simples-e-fofo</a></td>
+        </tr>
+        <tr>
+            <td>Bolo simples de liquidificador</td>
+            <td><a href="https://gean.me/receita?url=bolo-simples-de-liquidificador/" target="_blank">https://gean.me/bolo-simples-de-liquidificador</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate/" target="_blank">https://gean.me/bolo-de-chocolate</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate recheado</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-que-ja-sai-recheado-do-forno/" target="_blank">https://gean.me/bolo-de-chocolate-que-ja-sai-recheado-do-forno</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de Chocolate com recheio de brigadeiro e morango</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-com-recheio-de-brigadeiro-e-morango/" target="_blank">https://gean.me/bolo-de-chocolate-com-recheio-de-brigadeiro-e-morango</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate simples</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-simples/" target="_blank">https://gean.me/bolo-de-chocolate-simples</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate fofinho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-fofinho/" target="_blank">https://gean.me/bolo-de-chocolate-fofinho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate de liquidificador</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-de-liquidificador/" target="_blank">https://gean.me/bolo-de-chocolate-de-liquidificador</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate que já sai recheado do forno</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-que-ja-sai-recheado-do-forno/" target="_blank">https://gean.me/bolo-de-chocolate-que-ja-sai-recheado-do-forno</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate com recheio de Ninho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-com-recheio-de-ninho/" target="_blank">https://gean.me/bolo-de-chocolate-com-recheio-de-ninho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate fácil e Rápido</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-facil-e-rapido/" target="_blank">https://gean.me/bolo-de-chocolate-facil-e-rapido</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate com aveia</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-com-aveia/" target="_blank">https://gean.me/bolo-de-chocolate-com-aveia</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate com banana</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-com-banana-facil/" target="_blank">https://gean.me/bolo-de-chocolate-com-banana-facil</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de chocolate com café</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-chocolate-com-cafe/" target="_blank">https://gean.me/bolo-de-chocolate-com-cafe</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de aniversário de chocolate e beijinho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-aniversario-de-chocolate-e-beijinho/" target="_blank">https://gean.me/bolo-de-aniversario-de-chocolate-e-beijinho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo fofinho de cenoura</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura/" target="_blank">https://gean.me/bolo-de-cenoura</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de cenoura simples</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-simples/" target="_blank">https://gean.me/bolo-de-cenoura-simples</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de cenoura fofinho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-fofinho/" target="_blank">https://gean.me/bolo-de-cenoura-fofinho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de cenoura com cobertura de chocolate crocante</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-com-cobertura-de-chocolate-crocante/" target="_blank">https://gean.me/bolo-de-cenoura-com-cobertura-de-chocolate-crocante</a></td>
+        </tr>
+        <tr>
+            <td>Bolo vulcão de cenoura</td>
+            <td><a href="https://gean.me/receita?url=bolo-vulcao-de-cenoura/" target="_blank">https://gean.me/bolo-vulcao-de-cenoura</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de cenoura recheado</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-recheado/" target="_blank">https://gean.me/bolo-de-cenoura-recheado</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de cenoura super-recheado</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-super-recheado/" target="_blank">https://gean.me/bolo-de-cenoura-super-recheado</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de cenoura com fubá</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-com-fuba/" target="_blank">https://gean.me/bolo-de-cenoura-com-fuba</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de cenoura sem glúten</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-sem-gluten/" target="_blank">https://gean.me/bolo-de-cenoura-sem-gluten</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de cenoura vegano</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-cenoura-vegano/" target="_blank">https://gean.me/bolo-de-cenoura-vegano</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho/" target="_blank">https://gean.me/bolo-de-milho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho de lata</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-em-lata/" target="_blank">https://gean.me/bolo-de-milho-em-lata</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho com requeijão</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-com-requeijao/" target="_blank">https://gean.me/bolo-de-milho-com-requeijao</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho de liquidificador fácil</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-de-liquidificador-facil/" target="_blank">https://gean.me/bolo-de-milho-de-liquidificador-facil</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho cremoso facíl</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-cremoso/" target="_blank">https://gean.me/bolo-de-milho-cremoso</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho verde</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-verde/" target="_blank">https://gean.me/bolo-de-milho-verde</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho Caseiro</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-caseiro/" target="_blank">https://gean.me/bolo-de-milho-caseiro</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho com requeijão cremoso</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-com-queijo-cremoso/" target="_blank">https://gean.me/bolo-de-milho-com-queijo-cremoso</a></td>
+        </tr>
+        <tr>
+            <td>Bolo gelado de milho</td>
+            <td><a href="https://gean.me/receita?url=bolo-gelado-de-milho/" target="_blank">https://gean.me/bolo-gelado-de-milho</a></td>
+        </tr>
+        <tr>
+            <td>Bolo de milho sem lactose sem glútem e vegano</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-milho-sem-lactose-sem-gluten-e-vegano/" target="_blank">https://gean.me/bolo-de-milho-sem-lactose-sem-gluten-e-vegano</a></td>
+        </tr>
+        <tr>
+            <td>Bolos fofinos de fubá</td>
+            <td><a href="https://gean.me/receita?url=bolo-de-fuba/" target="_blank">https://gean.me/bolo-de-fuba</a></td>
+        </tr>
+    </tbody>
+</table>
 
-        function getSecondLinkId(url) {
-            fetch(`https://www.receiteria.com.br/receita/${url}`)
-            .then(response => response.text())
-            .then(html => {
-                const matches = html.match(/<link rel="shortlink" href="(.*?)" \/>/);
-                if (matches) {
-                    const linkSegundo = matches[1];
-                    const urlParams = new URLSearchParams(new URL(linkSegundo).search);
-                    const id = urlParams.get('p');
-                    if (id) {
-                        const iframe = document.createElement('iframe');
-                        iframe.src = `https://www.receiteria.com.br/imprimir?id=${id}`;
-                        iframe.width = '600px';
-                        iframe.height = '100%';
-                        iframe.frameborder = '0';
-                        iframe.scrolling = 'yes';
-                        document.getElementById('iframeContainer').appendChild(iframe);
-                    } else {
-                        console.error('Não foi possível encontrar o ID do segundo link.');
-                    }
-                } else {
-                    console.error('Não foi possível encontrar o link rel="shortlink" no HTML.');
-                }
-            })
-            .catch(error => {
-                console.error('Erro ao obter o ID do segundo link:', error);
-            });
-        }
-    </script>
 </body>
 </html>
